--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -219,6 +219,7 @@
   <ItemGroup>
     <None Include="..\Resources\Shader\default.hlsli" />
     <None Include="..\Resources\Shader\params.hlsli" />
+    <None Include="..\Resources\Shader\skybox.hlsli" />
     <None Include="..\Resources\Shader\utils.hlsli" />
     <None Include="SimpleMath.inl" />
   </ItemGroup>
