--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -217,17 +217,19 @@
     <None Include="SimpleMath.inl">
       <Filter>Utils</Filter>
     </None>
-    <None Include="..\Resources\Shader\params.hlsli">
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="..\Resources\Shader\params.fx">
       <Filter>Shader</Filter>
-    </None>
-    <None Include="..\Resources\Shader\utils.hlsli">
+    </FxCompile>
+    <FxCompile Include="..\Resources\Shader\skybox.fx">
       <Filter>Shader</Filter>
-    </None>
-    <None Include="..\Resources\Shader\default.hlsli">
+    </FxCompile>
+    <FxCompile Include="..\Resources\Shader\utils.fx">
       <Filter>Shader</Filter>
-    </None>
-    <None Include="..\Resources\Shader\skybox.hlsli">
+    </FxCompile>
+    <FxCompile Include="..\Resources\Shader\forward.fx">
       <Filter>Shader</Filter>
-    </None>
+    </FxCompile>
   </ItemGroup>
 </Project>
